# rhailander

./: Cargo.toml  README.md  main.rhai  test.rhai
scripts/: main.rhai
src/: cli.rs  companion.rs  helper.rs  main.rs  network.rs  script.rs  system.rs
