[package]
name = "rhailander"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"

[build]
src = "build.rs"

[dependencies]
clap = "2"
lazy_static = "1.4.0"
nix = "0.20.0"
reqwest = {version = "0.11", default-features = false, features = ["blocking", "rustls-tls"]}
rhai = "0.19.14"

[build-dependencies]
vergen = {version = "4", default-features = false, features = ["build", "git"]}
