[package]
name = "rhailander"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"

[build]
src = "build.rs"

[dependencies]
clap = "2"
cmd_lib = "0.14.6"
lazy_static = "1.4.0"
fs2 = "0.4.3"
nix = "0.20.0"
reqwest = {version = "0.11", default-features = false, features = ["blocking", "rustls-tls"]}
# Waiting for shebang release
rhai = { git = "https://github.com/rhaiscript/rhai", branch = "master" }
shlex = "1.0.0"
tempfile = "3.2.0"

[build-dependencies]
vergen = {version = "4", default-features = false, features = ["build", "git"]}
